editorconfig plugin added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myportfolio",
+  "name": "batman2021",
   "version": "1.0.0",
   "description": "my frontend portfolio",
   "main": "index.js",
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@htmlacademy/editorconfig-cli": "^1.0.0",
     "autoprefixer": "^9.7.4",
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
