main block upper part added

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,8 +1,14 @@
 {
+  "plugins": [
+    "stylelint-scss"
+  ],
+
   "extends": "stylelint-config-htmlacademy",
 
   "rules": {
     "declaration-no-important": true,
-    "indentation": [2, {"ignore": ["inside-parens"]}]
+    "indentation": [2, {"ignore": ["inside-parens"]}],
+    "at-rule-no-unknown": null,
+    "scss/at-rule-no-unknown": true,
   }
 }
